...
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.1">

                    <ImageButton
                        android:id="@+id/iBtnDetailedUsage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:background="@drawable/ic_baseline_trending_down_24"
                        android:visibility="gone" />

...
            </LinearLayout>
<View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="@color/backgroundColor"/>
            <LinearLayout
                android:id="@+id/llQuarterDetailsContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/quarter_details_container_padding"
                android:paddingRight="@dimen/quarter_details_container_padding"
                android:paddingBottom="@dimen/quarter_details_container_padding"
...
